# desktop-reminder-system

./: .gitignore  README.md  flake.nix  pyproject.toml  reminder-system.desktop  reminder-system.service  requirements.txt  run.py  setup.py
example_config/: config.toml
reminder_system/: __init__.py  app.py  config.py  overlay.py  scheduler.py
tests/: __init__.py  manual_trigger.py  run_with_fixtures.py  test_config.py  test_scheduler.py
tests/fixtures/: config.toml  test_icon.png.readme
