[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-reminder-system"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.4.0", "croniter>=1.3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
reminder-system = "reminder_system.app:main"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = ["pytest>=7.0.0"]
